--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>株式会社テクノダンゴムシ (Prototype)</title>
+    <title>テクノダンゴムシ (Prototype)</title>
     <style>
         /* Google Fontsの読み込み */
         @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300;400;700;900&display=swap');
@@ -401,4 +401,5 @@
         animate();
     </script>
 </body>
+
 </html>
